# CT-CLIP

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  pyproject.toml  tox.ini
CT_CLIP/: README.md  setup.py
CT_CLIP/ct_clip/: ct_clip.py
data_preprocess/: README.md  preprocess_ctrate_train.py  preprocess_ctrate_valid.py
scripts/: CTCLIPTrainer.py  README.md  bootstrap_values.py  ct_lipro_inference.py  ct_lipro_train.py  ct_vocabfine_train.py  data.py  data_inference.py  data_inference_nii.py  eval.py  forward_data.py  image_to_image.py  report_to_volume.py  report_to_volume_new.py  run_forward_data.py  run_train.py  run_zero_shot.py  text_to_image.py  tsne_latents.py  volume_to_volume.py  volume_to_volume_new.py  zero_shot.py
scripts/src/: args.py
scripts/src/models/: modeling.py
src/ct_clip/: __init__.py  helpers.py  types.py
src/ct_clip/ct_clip/: __init__.py  ct_clip.py  distributed.py  latents.py  mlm.py  tokenizer.py  visual_ssl.py
src/ct_clip/scripts/: data.py  (+15 more)
tests/: test_latents.py
tests/resources/: test_generate_latent_text.expected.npy  test_generate_latent_text.input.txt
text_classifier/: README.md  augmentation.py  classifier.py  cosine_annealing_warmup.py  dataset.py  eval.py  infer.py  inference.py  model_trainer.py  train.py
text_classifier/data/: map_train_classifier.csv  map_val_classifier.csv  test.csv  train.csv  val.csv
transformer_maskgit/: README.md  setup.py
transformer_maskgit/transformer_maskgit/: MaskGITTransformer.py  attention.py  ctvit.py  data.py  videotextdataset.py  videotextdatasettransformersuperres.py
(+17 files in other folders)
