[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ct-clip"
version = "0.1.0"
description = "CT-CLIP model python package"
readme = "README.md"
authors = [
    {name = "Ibrahim Ethem Hamamci", email = "ibrahim.hamamci@uzh.ch"},
]
maintainers = [
    {name = "John Flavin", email = "jflavin@wustl.edu"},
]
license = {file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
]
requires-python = ">= 3.8, < 3.12"  # Lower limit is a guess, upper limit is for compatibility with torch 2.0.1
dependencies = [
    "accelerate",
    "attr",
    "appdirs",
    "beartype",
    "click",
    "einops>=0.6",
    "ema-pytorch>=0.2.2",
    "ftfy",
    "h5py",
    "ImageNetV2_pytorch @ git+https://github.com/modestyachts/ImageNetV2_pytorch.git",
    "matplotlib",
    "nibabel",
    "nltk",
    "numpy<2",
    "opencv-python",
    "openpyxl",
    "pillow",
    "regex",
    "seaborn",
    "sentencepiece",
    "torch==2.0.1",
    "torchtyping",
    "torchvision",
    "tqdm",
    "transformers==4.30.1",
    "vector-quantize-pytorch==1.1.2",
    "wilds",
    "XlsxWriter",
]

[project.scripts]
run-zero-shot = "ct_clip.scripts.run_zero_shot:main_cli"
generate-latents = "ct_clip.scripts.run_generate_latents:main_cli"
